GMM_Main/src/objects/Grant_Monitoring__c.object
<CustomObject>
    <description>Grant Monitoring</description>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award ID</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Grant Monitoring</relationshipLabel>
        <relationshipName>Grant_Monitoring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Applicant__c</fullName>
        <formula>Grant__r.Organization_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFO__c</fullName>
        <formula>Grant__r.NOFA_Name__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Monitoring_Activity_Count__c</fullName>
        <description>Calculates the number of open Monitoring Activities.</description>
        <label>Open Monitoring Activity Count</label>
        <summarizedField>Monitoring_Plan__c.Open_Monitoring_Activity_Count__c</summarizedField>
        <summaryForeignKey>Monitoring_Plan__c.Grant_Monitoring__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <formula>TEXT (  Grant__r.Project__r.Project_End_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <formula>TEXT (Grant__r.Project__r.Project_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <description>Updates Project Title from Award</description>
        <label>Project Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Grant__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Grant__r.Grant_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Grant Monitoring</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Legal_Applicant__c</columns>
        <columns>Grant__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>Grant Monitoring Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Monitoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>